fix: hydration error on chrome on IOS

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@ body {
   background: var(--background);
 }
 
-body:before {
+/* body:before {
   content: "";
   background-color: transparent;
   background-image: url("data:image/svg+xml,%3C!-- svg: first layer --%3E%3Csvg viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.11' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
@@ -37,7 +37,7 @@ body:before {
   mix-blend-mode: soft-light;
   pointer-events: none;
 }
-
+ */
 section {
   @apply w-[90%] max-w-[1800px] mx-auto;
 }
